--- a/00_Titanic_Survival_Prediction.ipynb
+++ b/00_Titanic_Survival_Prediction.ipynb
@@ -40,14 +40,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Import everything needed for the project.\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "t_df = pd.read_csv('datasets/titanic.csv')"
    ]
   },
   {
@@ -71,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read in the titanic.csv dataset from the /datasets folder.  \n",
@@ -96,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a function used to visualize survival rates for the data frame passed in\n",
@@ -142,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def predict_survival(dataframe):\n",
@@ -174,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_confusion_matrix(predictions, labels):\n",
@@ -208,16 +220,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:MS-ML-P3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-MS-ML-P3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
