finished iris dataset

--- a/01_Decision_Trees.ipynb
+++ b/01_Decision_Trees.ipynb
@@ -692,19 +692,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'fit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-93-304086e84264>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m# Call clf.fit(), and pass in X_train and y_train as parameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'fit'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.75247524752475237"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -712,14 +711,15 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(clean_df, labels, test_size=0.3)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(clean_df, labels, test_size=0.33)\n",
     "\n",
-    "clf = clf.fit(X_train, y_train)\n",
+    "clf = DecisionTreeClassifier()\n",
     "# Call clf.fit(), and pass in X_train and y_train as parameters\n",
+    "clf.fit(X_train, y_train)\n",
+    "test_pred = clf.predict(X_test) # Use the .predict() method to have our model create predictions on the X_test variable\n",
     "\n",
-    "test_pred = None # Use the .predict() method to have our model create predictions on the X_test variable\n",
-    "\n",
-    "# Finally, pass in test_pred and y_test to the f1_score() object to get an f1_score!\n"
+    "# Finally, pass in test_pred and y_test to the f1_score() object to get an f1_score!\n",
+    "f1_score(test_pred, y_test)"
    ]
   },
   {
@@ -745,14 +745,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.        ,  0.92857143,  0.94736842])"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the Iris dataset from sklearn and use a decision tree classifier below!\n",
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)\n",
+    "clf = DecisionTreeClassifier()\n",
+    "clf.fit(X_train, y_train)\n",
+    "test_pred = clf.predict(X_test)\n",
+    "f1_score(test_pred, y_test, average=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Import the Iris dataset from sklearn and use a decision tree classifier below!\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
