fixed k-nearest functions

--- a/02_K_Nearest_Neighbors.ipynb
+++ b/02_K_Nearest_Neighbors.ipynb
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 172,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -44,15 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We'll use this method rather than use the Pythagorean theorem to calculate Euclidean distance manually.  \n",
     "from scipy.spatial import distance\n",
-    "\n",
+    "from collections import Counter\n",
+    "#But... PYTHAGORAS!\n",
     "class KNN():\n",
-    "    \n",
     "    def _euc(self, a, b):\n",
     "        '''Helper function that returns the Euclidean distance individual points a and b '''\n",
     "        return distance.euclidean(a, b)\n",
@@ -72,7 +76,7 @@
     "        self.X_train = X_train\n",
     "        self.y_train = y_train\n",
     "        \n",
-    "    def predict(self, X_test):\n",
+    "    def predict(self, X_test, K):\n",
     "        \"\"\"Predicts the label of the class for each row in X_test, based on the single closest point to each. \n",
     "        The way this is currently written, K is hardcoded to one so the user does not pass in a value for K when \n",
     "        calling it.\n",
@@ -83,22 +87,69 @@
     "        complete this task.\"\"\"\n",
     "        predicted_classes = []\n",
     "        for point in X_test:\n",
-    "            predicted_classes.append(self._closest_label(point))\n",
+    "            print(point)\n",
+    "            predicted_classes.append(self._value(self._closest(point, K)))\n",
     "        return predicted_classes\n",
+    "    \n",
+    "    def _value(self, points):\n",
     "        \n",
-    "    def _closest(self, row):\n",
+    "        histogram = Counter(points)\n",
+    "        return histogram.most_common(1)[0]\n",
+    "        \n",
+    "    \n",
+    "    def _closest(self, row, K):\n",
     "        \"\"\"Modify this function so that it takes a parameter, K, and retrieves the K closest points.  As is, this\n",
-    "        function currently only retrieves the labels of the single closest point.  \"\"\"\n",
+    "        function currently only retrieves the labels of the single closest point.  \n",
+    "        Runtime: O(KN) where K is the K nearest vectors and N is the number of vectors\n",
+    "        \"\"\"\n",
+    "        if K <= 0:\n",
+    "            return list()\n",
+    " \n",
+    "        return_list = list()\n",
+    "        shortest_list = list()\n",
+    "        #Distance Tuple is (data_index, distance to current point)\n",
+    "        # Start at first item and iterate through all data points\n",
+    "        dist_tuple = (0, self._distance(row, self.X_train[0]))\n",
+    "\n",
+    "        shortest_list.append(dist_tuple)\n",
     "        \n",
-    "        shortest_distance = self._distance(row, self.X_train[0])\n",
-    "        for i in range(1, len(self.X_train)):\n",
-    "            current_distance = self._distance(row, self.X_train[i])\n",
-    "            index_of_closest = 0\n",
-    "            # If this distance is shorter than the shortest distance, make it the new shortest distance.  \n",
-    "            if current_distance < shortest_distance:\n",
-    "                shortest_distance < current_distance\n",
-    "                index_of_closest = i\n",
-    "        return y_train[index_of_closest]\n",
+    "        for row_ndx in range(1, len(self.X_train)):                \n",
+    "            \n",
+    "            current_distance = self._distance(row, self.X_train[row_ndx])\n",
+    "            #shortest list is not full add item immediately\n",
+    "            if len(shortest_list) < K:\n",
+    "                dist_tuple = (row_ndx, current_distance)\n",
+    "                shortest_list.append(dist_tuple)\n",
+    "            else:\n",
+    "#                 print(\"shortest\", shortest_list)\n",
+    "#                 print(\"longest distance\", longest_distance)\n",
+    "#                 print(\"cur distance\", current_distance)\n",
+    "                \n",
+    "                longest_distance = shortest_list[0]\n",
+    "                longest_index = 0\n",
+    "                #Get longest distance to compare with \n",
+    "                for index, item in enumerate(shortest_list):\n",
+    "#                     print(index)\n",
+    "#                     print(longest_distance[1])\n",
+    "#                     print(item[1])\n",
+    "                    \n",
+    "                    if longest_distance[1] < item[1]:\n",
+    "#                         print(\"item is longer\")\n",
+    "                        longest_distance = item\n",
+    "                        longest_index = index\n",
+    "#                         print(\"longest:\", longest_distance)\n",
+    "                #check cur distance against largest in list and swap if true\n",
+    "                if current_distance < longest_distance[1]:\n",
+    "                    dist_tuple = (row_ndx, current_distance)\n",
+    "                    shortest_list[longest_index] = dist_tuple\n",
+    "#         print(shortest_list)\n",
+    "#         print(return_list)\n",
+    "        for item in shortest_list:\n",
+    "            return_list.append(self.y_train[item[0]])\n",
+    "#             print(item)\n",
+    "#             print(self.y_train[item[0]])\n",
+    "            \n",
+    "        return return_list\n",
     "    "
    ]
   },
@@ -121,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,17 +181,17 @@
     "\n",
     "# use load_iris() to bind the data to the 'iris' variable. The iris object will contain the data in it's .data \n",
     "#attribute, and the labels for the data in it's .target attribute\n",
-    "iris = None\n",
-    "X_vals = None\n",
-    "y_vals = None\n",
+    "iris = load_iris()\n",
+    "X_vals = iris.data\n",
+    "y_vals = iris.target\n",
     "\n",
     "# Create a StandardScaler() Object. \n",
-    "scaler = None\n",
+    "scaler = StandardScaler()\n",
     "\n",
     "# Call scaler.fit() on the X_vals that will be rescaled.\n",
-    "\n",
+    "scaler.fit(X_vals)\n",
     "# Bind the newly scaled X_vals to scaled_X_vals by calling scaler.transform() on X_vals.\n",
-    "scaled_X_vals = None"
+    "scaled_X_vals = scaler.transform(X_vals)"
    ]
   },
   {
@@ -162,22 +213,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.8  2.8  5.1  2.4]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 6.   2.2  4.   1. ]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.5  4.2  1.4  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 7.3  2.9  6.3  1.8]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.   3.4  1.5  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.3  3.3  6.   2.5]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.   3.5  1.3  0.3]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.7  3.1  4.7  1.5]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.8  2.8  4.8  1.4]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.1  2.8  4.   1.3]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.1  2.6  5.6  1.4]\n",
+      "[(2, 4)]\n",
+      "points [2, 2, 2, 2, 1]\n",
+      "[ 6.4  3.2  4.5  1.5]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.1  2.8  4.7  1.2]\n",
+      "[(1, 4)]\n",
+      "points [1, 1, 1, 1, 2]\n",
+      "[ 6.5  2.8  4.6  1.5]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.1  2.9  4.7  1.4]\n",
+      "[(1, 4)]\n",
+      "points [1, 2, 1, 1, 1]\n",
+      "[ 4.9  3.1  1.5  0.1]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.   2.9  4.5  1.5]\n",
+      "[(1, 4)]\n",
+      "points [1, 1, 1, 1, 2]\n",
+      "[ 5.5  2.6  4.4  1.2]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 4.8  3.   1.4  0.3]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 5.4  3.9  1.3  0.4]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 5.6  2.8  4.9  2. ]\n",
+      "[(2, 4)]\n",
+      "points [1, 2, 2, 2, 2]\n",
+      "[ 5.6  3.   4.5  1.5]\n",
+      "[(1, 4)]\n",
+      "points [1, 1, 1, 1, 2]\n",
+      "[ 4.8  3.4  1.9  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 4.4  2.9  1.4  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.2  2.8  4.8  1.8]\n",
+      "[(2, 3)]\n",
+      "points [1, 2, 2, 1, 2]\n",
+      "[ 4.6  3.6  1.   0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 5.1  3.8  1.9  0.4]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.2  2.9  4.3  1.3]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.   2.3  3.3  1. ]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.   3.4  1.6  0.4]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.4  3.1  5.5  1.8]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.4  3.   4.5  1.5]\n",
+      "[(1, 4)]\n",
+      "points [1, 1, 1, 2, 1]\n",
+      "[ 5.2  3.5  1.5  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.1  3.   4.9  1.8]\n",
+      "[(2, 3)]\n",
+      "points [2, 2, 2, 1, 1]\n",
+      "[ 6.4  2.8  5.6  2.2]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.2  2.7  3.9  1.4]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.7  3.8  1.7  0.3]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.   2.7  5.1  1.6]\n",
+      "[(2, 4)]\n",
+      "points [2, 2, 2, 2, 1]\n",
+      "[ 5.9  3.   4.2  1.5]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.8  2.6  4.   1.2]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.8  3.   5.5  2.1]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 4.7  3.2  1.3  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.9  3.1  5.1  2.3]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.   3.5  1.6  0.6]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 5.4  3.7  1.5  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 5.   2.   3.5  1. ]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.5  3.   5.5  1.8]\n",
+      "[(2, 4)]\n",
+      "points [2, 1, 2, 2, 2]\n",
+      "[ 6.7  3.3  5.7  2.5]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 6.   2.2  5.   1.5]\n",
+      "[(1, 3)]\n",
+      "points [1, 1, 2, 2, 1]\n",
+      "[ 6.7  2.5  5.8  1.8]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.6  2.5  3.9  1.1]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 7.7  3.   6.1  2.3]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 6.3  3.3  4.7  1.6]\n",
+      "[(1, 3)]\n",
+      "points [1, 2, 2, 1, 1]\n",
+      "[ 5.5  2.4  3.8  1.1]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.3  2.7  4.9  1.8]\n",
+      "[(2, 4)]\n",
+      "points [2, 2, 1, 2, 2]\n",
+      "[ 6.3  2.8  5.1  1.5]\n",
+      "[(2, 3)]\n",
+      "points [1, 2, 1, 2, 2]\n",
+      "[ 4.9  2.5  4.5  1.7]\n",
+      "[(1, 3)]\n",
+      "points [2, 1, 1, 2, 1]\n",
+      "[ 6.3  2.5  5.   1.9]\n",
+      "[(2, 4)]\n",
+      "points [2, 2, 1, 2, 2]\n",
+      "[ 7.   3.2  4.7  1.4]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.5  3.   5.2  2. ]\n",
+      "[(2, 4)]\n",
+      "points [1, 2, 2, 2, 2]\n",
+      "[ 6.   3.4  4.5  1.6]\n",
+      "[(1, 3)]\n",
+      "points [1, 2, 1, 2, 1]\n",
+      "[ 4.8  3.1  1.6  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 5.8  2.7  5.1  1.9]\n",
+      "[(2, 4)]\n",
+      "points [1, 2, 2, 2, 2]\n",
+      "[ 5.6  2.7  4.2  1.3]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.6  2.9  3.6  1.3]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.5  2.5  4.   1.3]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 6.1  3.   4.6  1.4]\n",
+      "[(1, 4)]\n",
+      "points [2, 1, 1, 1, 1]\n",
+      "[ 7.2  3.2  6.   1.8]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.3  3.7  1.5  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 4.3  3.   1.1  0.1]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.4  2.7  5.3  1.9]\n",
+      "[(2, 5)]\n",
+      "points [2, 2, 2, 2, 2]\n",
+      "[ 5.7  3.   4.2  1.2]\n",
+      "[(1, 5)]\n",
+      "points [1, 1, 1, 1, 1]\n",
+      "[ 5.4  3.4  1.7  0.2]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 5.7  4.4  1.5  0.4]\n",
+      "[(0, 5)]\n",
+      "points [0, 0, 0, 0, 0]\n",
+      "[ 6.9  3.1  4.9  1.5]\n",
+      "[(1, 4)]\n",
+      "points [1, 1, 2, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# TODO: Use train_test_split to split our scaled data into training and testing sets.  Use a test amount of .5.  \n",
+    "# Use train_test_split to split our scaled data into training and testing sets.  \n",
+    "# Use a test amount of .5.  \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_vals, y_vals, test_size=.5)\n",
     "\n",
-    "#TODO: Create a KNN object using the class you wrote above.  Fit the data and use it to predict labels for X_test.  \n",
-    "clf = None\n",
+    "# Create a KNN object using the class you wrote above.  \n",
+    "# Fit the data and use it to predict labels for X_test.  \n",
+    "clf = KNN()\n",
+    "clf.fit(X_train, y_train)\n",
+    "clf.predict(X_test, 5)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# TODO: Use the accuracy_score object to evaluate the quality of your KNN object's predictions. Try passing in different\n",
+    "# TODO: Use the accuracy_score object to evaluate the quality of your KNN object's predictions. \n",
+    "# Try passing in different\n",
+    "\n",
     "# values for K at prediction time and see which value does best!\n",
     "\n",
     "\n",
@@ -190,14 +481,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
