--- a/02_K_Nearest_Neighbors.ipynb
+++ b/02_K_Nearest_Neighbors.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 200,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 201,
    "metadata": {
     "collapsed": true
    },
@@ -87,14 +87,14 @@
     "        complete this task.\"\"\"\n",
     "        predicted_classes = []\n",
     "        for point in X_test:\n",
-    "            print(point)\n",
     "            predicted_classes.append(self._value(self._closest(point, K)))\n",
     "        return predicted_classes\n",
     "    \n",
     "    def _value(self, points):\n",
     "        \n",
     "        histogram = Counter(points)\n",
-    "        return histogram.most_common(1)[0]\n",
+    "#         print(histogram.most_common(1)[0][0])\n",
+    "        return histogram.most_common(1)[0][0]\n",
     "        \n",
     "    \n",
     "    def _closest(self, row, K):\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,239 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5.8  2.8  5.1  2.4]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 6.   2.2  4.   1. ]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.5  4.2  1.4  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 7.3  2.9  6.3  1.8]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.   3.4  1.5  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.3  3.3  6.   2.5]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.   3.5  1.3  0.3]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.7  3.1  4.7  1.5]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.8  2.8  4.8  1.4]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.1  2.8  4.   1.3]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.1  2.6  5.6  1.4]\n",
-      "[(2, 4)]\n",
-      "points [2, 2, 2, 2, 1]\n",
-      "[ 6.4  3.2  4.5  1.5]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.1  2.8  4.7  1.2]\n",
-      "[(1, 4)]\n",
-      "points [1, 1, 1, 1, 2]\n",
-      "[ 6.5  2.8  4.6  1.5]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.1  2.9  4.7  1.4]\n",
-      "[(1, 4)]\n",
-      "points [1, 2, 1, 1, 1]\n",
-      "[ 4.9  3.1  1.5  0.1]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.   2.9  4.5  1.5]\n",
-      "[(1, 4)]\n",
-      "points [1, 1, 1, 1, 2]\n",
-      "[ 5.5  2.6  4.4  1.2]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 4.8  3.   1.4  0.3]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 5.4  3.9  1.3  0.4]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 5.6  2.8  4.9  2. ]\n",
-      "[(2, 4)]\n",
-      "points [1, 2, 2, 2, 2]\n",
-      "[ 5.6  3.   4.5  1.5]\n",
-      "[(1, 4)]\n",
-      "points [1, 1, 1, 1, 2]\n",
-      "[ 4.8  3.4  1.9  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 4.4  2.9  1.4  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.2  2.8  4.8  1.8]\n",
-      "[(2, 3)]\n",
-      "points [1, 2, 2, 1, 2]\n",
-      "[ 4.6  3.6  1.   0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 5.1  3.8  1.9  0.4]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.2  2.9  4.3  1.3]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.   2.3  3.3  1. ]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.   3.4  1.6  0.4]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.4  3.1  5.5  1.8]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.4  3.   4.5  1.5]\n",
-      "[(1, 4)]\n",
-      "points [1, 1, 1, 2, 1]\n",
-      "[ 5.2  3.5  1.5  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.1  3.   4.9  1.8]\n",
-      "[(2, 3)]\n",
-      "points [2, 2, 2, 1, 1]\n",
-      "[ 6.4  2.8  5.6  2.2]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.2  2.7  3.9  1.4]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.7  3.8  1.7  0.3]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.   2.7  5.1  1.6]\n",
-      "[(2, 4)]\n",
-      "points [2, 2, 2, 2, 1]\n",
-      "[ 5.9  3.   4.2  1.5]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.8  2.6  4.   1.2]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.8  3.   5.5  2.1]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 4.7  3.2  1.3  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.9  3.1  5.1  2.3]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.   3.5  1.6  0.6]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 5.4  3.7  1.5  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 5.   2.   3.5  1. ]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.5  3.   5.5  1.8]\n",
-      "[(2, 4)]\n",
-      "points [2, 1, 2, 2, 2]\n",
-      "[ 6.7  3.3  5.7  2.5]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 6.   2.2  5.   1.5]\n",
-      "[(1, 3)]\n",
-      "points [1, 1, 2, 2, 1]\n",
-      "[ 6.7  2.5  5.8  1.8]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.6  2.5  3.9  1.1]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 7.7  3.   6.1  2.3]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 6.3  3.3  4.7  1.6]\n",
-      "[(1, 3)]\n",
-      "points [1, 2, 2, 1, 1]\n",
-      "[ 5.5  2.4  3.8  1.1]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.3  2.7  4.9  1.8]\n",
-      "[(2, 4)]\n",
-      "points [2, 2, 1, 2, 2]\n",
-      "[ 6.3  2.8  5.1  1.5]\n",
-      "[(2, 3)]\n",
-      "points [1, 2, 1, 2, 2]\n",
-      "[ 4.9  2.5  4.5  1.7]\n",
-      "[(1, 3)]\n",
-      "points [2, 1, 1, 2, 1]\n",
-      "[ 6.3  2.5  5.   1.9]\n",
-      "[(2, 4)]\n",
-      "points [2, 2, 1, 2, 2]\n",
-      "[ 7.   3.2  4.7  1.4]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.5  3.   5.2  2. ]\n",
-      "[(2, 4)]\n",
-      "points [1, 2, 2, 2, 2]\n",
-      "[ 6.   3.4  4.5  1.6]\n",
-      "[(1, 3)]\n",
-      "points [1, 2, 1, 2, 1]\n",
-      "[ 4.8  3.1  1.6  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 5.8  2.7  5.1  1.9]\n",
-      "[(2, 4)]\n",
-      "points [1, 2, 2, 2, 2]\n",
-      "[ 5.6  2.7  4.2  1.3]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.6  2.9  3.6  1.3]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.5  2.5  4.   1.3]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 6.1  3.   4.6  1.4]\n",
-      "[(1, 4)]\n",
-      "points [2, 1, 1, 1, 1]\n",
-      "[ 7.2  3.2  6.   1.8]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.3  3.7  1.5  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 4.3  3.   1.1  0.1]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.4  2.7  5.3  1.9]\n",
-      "[(2, 5)]\n",
-      "points [2, 2, 2, 2, 2]\n",
-      "[ 5.7  3.   4.2  1.2]\n",
-      "[(1, 5)]\n",
-      "points [1, 1, 1, 1, 1]\n",
-      "[ 5.4  3.4  1.7  0.2]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 5.7  4.4  1.5  0.4]\n",
-      "[(0, 5)]\n",
-      "points [0, 0, 0, 0, 0]\n",
-      "[ 6.9  3.1  4.9  1.5]\n",
-      "[(1, 4)]\n",
-      "points [1, 1, 2, 1, 1]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.97333333333333338"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -459,16 +238,17 @@
     "# Fit the data and use it to predict labels for X_test.  \n",
     "clf = KNN()\n",
     "clf.fit(X_train, y_train)\n",
-    "clf.predict(X_test, 5)\n",
-    "\n",
-    "\n",
-    "\n",
+    "test_pred = clf.predict(X_test, 10)\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# TODO: Use the accuracy_score object to evaluate the quality of your KNN object's predictions. \n",
+    "# Use the accuracy_score object to evaluate the quality of your KNN object's predictions. \n",
     "# Try passing in different\n",
-    "\n",
+    "# print(len(y_test))\n",
+    "# print(len(test_pred))\n",
+    "# print(y_test)\n",
+    "# print(test_pred)\n",
+    "accuracy_score(y_test, test_pred, normalize=True, sample_weight=None)\n",
     "# values for K at prediction time and see which value does best!\n",
     "\n",
     "\n",
@@ -477,6 +257,15 @@
     "# sklearn.neighbors.  Fit the data to the object and use it to make predictions just as you did with your own KNN above. \n",
     "# Finally, use the accuracy_score object to measure the quality of this classifier's predictions. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
