--- a/02_K_Nearest_Neighbors.ipynb
+++ b/02_K_Nearest_Neighbors.ipynb
@@ -213,18 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.97333333333333338"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Self rolled prediction: 0.933333333333\n",
+      "sklearn 0.92\n"
+     ]
     }
    ],
    "source": [
@@ -239,7 +237,6 @@
     "clf = KNN()\n",
     "clf.fit(X_train, y_train)\n",
     "test_pred = clf.predict(X_test, 10)\n",
-    "\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Use the accuracy_score object to evaluate the quality of your KNN object's predictions. \n",
@@ -248,14 +245,21 @@
     "# print(len(test_pred))\n",
     "# print(y_test)\n",
     "# print(test_pred)\n",
-    "accuracy_score(y_test, test_pred, normalize=True, sample_weight=None)\n",
+    "score = accuracy_score(y_test, test_pred, normalize=True, sample_weight=None)\n",
     "# values for K at prediction time and see which value does best!\n",
+    "print(\"Self rolled prediction:\", score)\n",
     "\n",
     "\n",
     "\n",
-    "# TODO: Finally, get some practice with SKLearn's KNN Classifier.  Import the KNeighborsClassifier object from \n",
+    "# Finally, get some practice with SKLearn's KNN Classifier.  Import the KNeighborsClassifier object from \n",
     "# sklearn.neighbors.  Fit the data to the object and use it to make predictions just as you did with your own KNN above. \n",
-    "# Finally, use the accuracy_score object to measure the quality of this classifier's predictions. \n"
+    "# Finally, use the accuracy_score object to measure the quality of this classifier's predictions. \n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "neigh = KNeighborsClassifier(n_neighbors=10)\n",
+    "neigh.fit(X_train, y_train)\n",
+    "pred = neigh.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, pred, normalize=True, sample_weight = None)\n",
+    "print(\"sklearn\", accuracy)"
    ]
   },
   {
