--- a/02_K_Nearest_Neighbors.ipynb
+++ b/02_K_Nearest_Neighbors.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 305,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 306,
    "metadata": {
     "collapsed": true
    },
@@ -120,34 +120,23 @@
     "            if len(shortest_list) < K:\n",
     "                dist_tuple = (row_ndx, current_distance)\n",
     "                shortest_list.append(dist_tuple)\n",
-    "            else:\n",
-    "#                 print(\"shortest\", shortest_list)\n",
-    "#                 print(\"longest distance\", longest_distance)\n",
-    "#                 print(\"cur distance\", current_distance)\n",
-    "                \n",
+    "            else:        \n",
     "                longest_distance = shortest_list[0]\n",
     "                longest_index = 0\n",
     "                #Get longest distance to compare with \n",
     "                for index, item in enumerate(shortest_list):\n",
-    "#                     print(index)\n",
-    "#                     print(longest_distance[1])\n",
-    "#                     print(item[1])\n",
     "                    \n",
     "                    if longest_distance[1] < item[1]:\n",
-    "#                         print(\"item is longer\")\n",
     "                        longest_distance = item\n",
     "                        longest_index = index\n",
-    "#                         print(\"longest:\", longest_distance)\n",
+    "\n",
     "                #check cur distance against largest in list and swap if true\n",
     "                if current_distance < longest_distance[1]:\n",
     "                    dist_tuple = (row_ndx, current_distance)\n",
     "                    shortest_list[longest_index] = dist_tuple\n",
-    "#         print(shortest_list)\n",
-    "#         print(return_list)\n",
+    "\n",
     "        for item in shortest_list:\n",
     "            return_list.append(self.y_train[item[0]])\n",
-    "#             print(item)\n",
-    "#             print(self.y_train[item[0]])\n",
     "            \n",
     "        return return_list\n",
     "    "
@@ -172,8 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
+   "execution_count": 307,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -213,30 +204,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 308,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Use train_test_split to split our scaled data into training and testing sets.  \n",
+    "# Use a test amount of .5.  \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_vals, y_vals, test_size=.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Self rolled prediction: 0.946666666667\n",
-      "sklearn 0.92\n"
+      "Self rolled prediction: 0.906666666667\n",
+      "sklearn 0.906666666667\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Use train_test_split to split our scaled data into training and testing sets.  \n",
-    "# Use a test amount of .5.  \n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_vals, y_vals, test_size=.5)\n",
     "\n",
     "# Create a KNN object using the class you wrote above.  \n",
     "# Fit the data and use it to predict labels for X_test.  \n",
     "clf = KNN()\n",
     "clf.fit(X_train, y_train)\n",
-    "test_pred = clf.predict(X_test, 10)\n",
+    "test_pred = clf.predict(X_test, 1)\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Use the accuracy_score object to evaluate the quality of your KNN object's predictions. \n",
@@ -255,12 +257,27 @@
     "# sklearn.neighbors.  Fit the data to the object and use it to make predictions just as you did with your own KNN above. \n",
     "# Finally, use the accuracy_score object to measure the quality of this classifier's predictions. \n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "neigh = KNeighborsClassifier(n_neighbors=10)\n",
+    "neigh = KNeighborsClassifier(n_neighbors=1)\n",
     "neigh.fit(X_train, y_train)\n",
     "pred = neigh.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, pred, normalize=True, sample_weight = None)\n",
-    "print(\"sklearn\", accuracy)"
+    "print(\"sklearn\", accuracy)\n",
+    "\n",
+    "# 5 Nearest 96%\n",
+    "# 10 Nearest 97%, 99%\n",
+    "#20 Nearest: 90.1%\n",
+    "# 40 nearest: 90.1%\n",
+    "# 70 nearest: 28%, 28%"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
